...
            "state" : "translated",
            "value" : "افزودن عکس"
          }
        }
      }
    },
    "Add Subtask" : {
      "localizations" : {
        "fa" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "افزودن زیرکار"
          }
...
            "state" : "translated",
            "value" : "همه‌ی کارهای این لیست هم حذف می‌شوند."
          }
        }
      }
    },
    "App Icon" : {
      "localizations" : {
        "fa" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "آیکون برنامه"
          }
...
            "state" : "translated",
            "value" : "سر وقت کار"
          }
        }
      }
    },
    "Blue" : {
      "localizations" : {
        "fa" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "آبی"
          }
        }
      }
    },
    "Buy groceries" : {
      "extractionState" : "manual",
      "localizations" : {
        "fa" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "خرید خانه"
...
            "state" : "translated",
            "value" : "تقویم"
          }
        }
      }
    },
    "Call mom" : {
      "extractionState" : "manual",
      "localizations" : {
        "fa" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "تماس با مامان"
...
            "state" : "translated",
            "value" : "نام لیست"
          }
        }
      }
    },
    "Lists" : {
      "localizations" : {
        "fa" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "لیست‌ها"
          }
...
            "state" : "translated",
            "value" : "نیمه‌شب"
          }
        }
      }
    },
    "Mint" : {
      "localizations" : {
        "fa" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "نعنایی"
          }
...
            "state" : "translated",
            "value" : "بیشتر"
          }
        }
      }
    },
    "More Details" : {
      "localizations" : {
        "fa" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "جزئیات بیشتر"
          }
...
            "state" : "translated",
            "value" : "چیزی با «%@» پیدا نشد."
          }
        }
      }
    },
    "On Certain Days" : {
      "localizations" : {
        "fa" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "روزهای مشخص"
          }
...
            "state" : "translated",
            "value" : "نمایش انجام‌شده‌ها (%lld)"
          }
        }
      }
    },
    "Show Progress" : {
      "localizations" : {
        "fa" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "نمایش پیشرفت"
          }
...
